# job-hunting-agent

./: .env.example  .gitignore  README.md  proposal.md  pyproject.toml
.data/: app.db
.data/chroma/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/dist-electron/: main.js  preload.mjs
frontend/electron/: main.ts  preload.ts
frontend/src/: env.d.ts  main.ts  router.ts  styles.css
interview_agent/: __init__.py  __main__.py  cli.py  qq_bot.py  telegram_bot.py
interview_agent/actions/: __init__.py  ticktick.py
interview_agent/agent/: __init__.py  context.py  event_bus.py  events.py  lifecycle.py  memory.py  plugins.py  proactive.py  reasoner.py  runtime.py  semantic_plugin.py  tools.py
interview_agent/app/: __init__.py  config.py  main.py  providers.py  schemas.py  workspace_init.py
interview_agent/core/: __init__.py  container.py
interview_copilot_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: init_workspace.py  reset_workspace.py  run_api.py  run_qq_bot.py  run_telegram_bot.py  smoke_sync_ticktick.py
tests/: conftest.py  test_agent_runtime.py  test_api_flow.py  test_cli.py  test_eval_cases.py  test_mock_interview.py  test_providers.py  test_qq_bot.py  test_question_ingestion_upgrade.py  test_question_parser.py  test_resume_editor.py  test_retrieval_service.py  test_scoring_and_chunking.py  test_telegram_bot.py  test_ticktick_sync.py  test_workbench_api.py  test_workspace_config.py  test_workspace_init.py
(+49 files in other folders)
