[project]
name = "interview-copilot-agent"
version = "0.1.0"
description = "Interview Copilot Agent backend MVP"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=0.5.5",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pypdf>=4.2.0",
  "sqlalchemy>=2.0.30",
  "uvicorn>=0.30.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
